--- a/preview/index.html
+++ b/preview/index.html
@@ -19,23 +19,13 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="header-container">
-    <header class="wrapper clearfix">
-        <h1 class="title">h1.title</h1>
-        <nav>
-    <ul>
-        <li><a href="#">nav ul li a</a></li>
-        <li><a href="#">nav ul li a</a></li>
-        <li><a href="#">nav ul li a</a></li>
-    </ul>
-</nav>
-    </header>
 </div>
 
         <div class="main-container">
             <div class="main wrapper clearfix">
       
 
-              <iframe src="/mail_1/index.html"></iframe>
+              <iframe src="../dist/mail_1/index.html"></iframe>
 
             
             </div>
