--- a/preview/index.html
+++ b/preview/index.html
@@ -25,7 +25,7 @@
             <div class="main wrapper clearfix">
       
 
-              <iframe style="width:800px;height:900px" src="../dist/mail_2/index_1.html"></iframe>
+              <iframe style="width:800px;height:900px" src="../dist/default/default.html"></iframe>
 
             
             </div>
