--- a/assemble/default/default.html
+++ b/assemble/default/default.html
@@ -47,7 +47,7 @@ ul {
 
         <p class="br">&nbsp;</p>
 
-        <p><strong>This is really quite clever</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
+        <p><strong>This is really quite clever!!!!</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.</p>
 
         <p class="br">&nbsp;</p>
 
@@ -81,7 +81,7 @@ ul {
   </table>
   <table id="halves" class="p0">
     <tr>
-    <td class="resFull"><a href="#"><img src="http://placehold.it/300x100/994453?text=first+column" alt="altText" class="imageFix imageFluid"></a></td>
+    <td class="resFull"><a href="#"><img src="images/text-1.png" alt="altText" class="imageFix imageFluid"></a></td>
     <td class="resFull"><a href="#"><img src="http://placehold.it/300x100/889988?text=second+column" alt="altText" class="imageFix imageFluid"></a></td>
     </tr>
   </table>
