--- a/preview/index.html
+++ b/preview/index.html
@@ -1,39 +1,37 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="styles/main.css">
-
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div class="header-container">
-</div>
-
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-      
-
-              <iframe style="width:800px;height:900px" src="../dist/default/default.html"></iframe>
-
-            
-            </div>
-        </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <script src="scripts/main.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en" class="preview-interface-view">
+<head>
+  <meta charset="UTF-8">
+  <title>Email Assemble :: (Preview)</title>
+  <link rel="stylesheet" href="styles/preview.css">
+</head>
+<body>
+  <div id="header" class="header">
+    <div class="header--brand"><a href="#" target="_blank"> Email Assemble</a></div>
+    <div class="header--select">
+      Preview:&nbsp;
+      <select id="template-select">
+        <option value="_blank.html">Select a Email</option>
+      </select>
+    </div>
+  </div>
+  <section class="preview-ui">
+    <article class="preview-ui--full">
+      <div class="preview-ui--full__container">
+        <iframe src="_blank.html"></iframe>
+      </div>
+    </article>
+    <!-- http://www.paintcodeapp.com/news/ultimate-guide-to-iphone-resolutions -->
+    <article id="mobile-drawer" class="preview-ui--mobile">
+      <a class="js-drawer-toggle preview-ui--mobile__toggle toggle-drawer-close"></a>
+      <a class="js-drawer-toggle preview-ui--mobile__toggle toggle-drawer-open"></a>
+      <div class="preview-ui--mobile__container">
+        <iframe src="_blank.html"></iframe>
+      </div>
+    </article>
+    <br style="clear:both;">
+  </section>
+<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+<script src="scripts/main.js"></script>
+</body>
 </html>
-
