--- a/preview/_blank.html
+++ b/preview/_blank.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BLANK</title>
-  <link rel="stylesheet" href="/css/preview.css">
+  <link rel="stylesheet" href="styles/preview.css">
 </head>
 <body>
   <div class="wrapper">
