--- a/assemble/default/default.html
+++ b/assemble/default/default.html
@@ -115,29 +115,12 @@ ul {
 
   <table id="thirds" class="p0">
     <tr>
-<td class="columns content-block">
-  [mso_open]
-  <table>
-            <tr>
-    <td class="resFull-col" style="width:200px">
-      [mso_close]
-      <div class="resFull col p0" style="max-width:200px">            <a href="#"><img src="http://placehold.it/200x150/994453?text=first+column" alt="altText" class="imageFix imageFluid"></a>
-    </div>
-      [mso_open]
-    </td><td class="lresFulleft-col" style="width:200px">
-      [mso_close]
-      <div class="lresFulleft col p0" style="max-width:200px">            <a href="#"><img src="http://placehold.it/200x150/889988?text=second+column" alt="altText" class="imageFix imageFluid"></a>
-    </div>
-      [mso_open]
-    </td><td class="resFull-col" style="width:200px">
-      [mso_close]
-      <div class="resFull col p0" style="max-width:200px">            <a href="#"><img src="http://placehold.it/200x150/4040f0?text=third+column" alt="altText" class="imageFix imageFluid"></a>
-    </div>
-      [mso_open]
-    </td>        </tr>
-  </table>
-  [mso_close]
-</td>    </tr>
+      <td class="resFull"><a href="#"><img src="http://placehold.it/200x150/994453?text=first+column" alt="altText" class="imageFix imageFluid"></a></td>
+
+      <td class="resFull"><a href="#"><img src="http://placehold.it/200x150/889988?text=second+column" alt="altText" class="imageFix imageFluid"></a></td>
+
+      <td class="resFull"><a href="#"><img src="http://placehold.it/200x150/4040f0?text=third+column" alt="altText" class="imageFix imageFluid"></a></td>
+    </tr>
   </table>
 </div>
 </div>
