--- a/preview/_blank.html
+++ b/preview/_blank.html
@@ -9,12 +9,30 @@
   <div class="wrapper">
     <div class="wrapper--inner">
       <div class="animation">
-        <span class="animation--icon"><span></span></span>
-        <span class="animation--icon"><span></span></span>
-        <span class="animation--stem"></span>
+        <div class="assembly">
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="tri"></div>
+          <div class="hex"></div>
+        </div>
       </div>
       <div class="instruct">
-        <h1>Alright. Let's roll...</h1>
+        <h1>Let's do this...</h1>
         <p>Select a template from the upper right.</p>
       </div>
     </div>
