Remained a few templates. Fleshed out the readme a little Added licence ^-^

--- a/preview/_blank.html
+++ b/preview/_blank.html
@@ -9,6 +9,7 @@
   <div class="wrapper">
     <div class="wrapper--inner">
       <div class="animation">
+        <!-- https://codepen.io/thebabydino/pen/bVQJeV all credit to Ana Tudor -->
         <div class="assembly">
           <div class="tri"></div>
           <div class="tri"></div>
