--- a/preview/index.html
+++ b/preview/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="header" class="header">
-    <div class="header--brand"><a href="#" target="_blank"> Email Assemble</a></div>
+    <div class="header--brand"><a href="https://github.com/DrewGarratt/gulp-email-assemble" target="_blank"> Email Assemble</a></div>
     <div class="header--select">
       Preview:&nbsp;
       <select id="template-select">
